--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,094</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">83,212</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.airtech.qa.testcases.CartPageTest</td><td><a href="#m0">UpdateCartTest</a></td><td rowspan="1">1747894672344</td><td rowspan="1">10555</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.airtech.qa.testcases.LoginPageTest</td><td><a href="#m0">ForgotPasswordTest</a></td><td rowspan="1">1748000235583</td><td rowspan="1">2390</td></tr><tr class="passedeven"><td><a href="#m1">LoginTextTest</a></td><td rowspan="1">1748000199491</td><td rowspan="1">173</td></tr><tr class="passedeven"><td><a href="#m2">ToggleTest</a></td><td rowspan="1">1748000248638</td><td rowspan="1">848</td></tr><tr class="passedeven"><td><a href="#m3">ValidationTest</a></td><td rowspan="1">1748000211361</td><td rowspan="1">282</td></tr><tr class="passedeven"><td><a href="#m4">logintest</a></td><td rowspan="1">1748000259584</td><td rowspan="1">3720</td></tr><tr class="passedeven"><td><a href="#m5">registertest</a></td><td rowspan="1">1748000220946</td><td rowspan="1">3876</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.airtech.qa.testcases.CartPageTest#UpdateCartTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.airtech.qa.testcases.LoginPageTest#ForgotPasswordTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.airtech.qa.testcases.LoginPageTest#LoginTextTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.airtech.qa.testcases.LoginPageTest#ToggleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.airtech.qa.testcases.LoginPageTest#ValidationTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.airtech.qa.testcases.LoginPageTest#logintest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.airtech.qa.testcases.LoginPageTest#registertest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
